Reload kernel and run al cells

--- a/higaredjra_Lab7_KNN-1.ipynb
+++ b/higaredjra_Lab7_KNN-1.ipynb
@@ -29,8 +29,8 @@
    "id": "d12f232b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:54:27.764303Z",
-     "start_time": "2025-10-15T18:54:27.396573Z"
+     "end_time": "2025-10-15T19:34:28.050167Z",
+     "start_time": "2025-10-15T19:34:28.045564Z"
     }
    },
    "source": [
@@ -52,7 +52,7 @@
     "warnings.filterwarnings('ignore', category=FutureWarning)"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -67,8 +67,8 @@
    "id": "1f3c2b2e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:54:27.798979Z",
-     "start_time": "2025-10-15T18:54:27.774865Z"
+     "end_time": "2025-10-15T19:34:28.085264Z",
+     "start_time": "2025-10-15T19:34:28.065261Z"
     }
    },
    "source": [
@@ -170,12 +170,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -190,8 +190,8 @@
    "id": "c30c9fdd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:54:29.727309Z",
-     "start_time": "2025-10-15T18:54:27.859808Z"
+     "end_time": "2025-10-15T19:34:29.927186Z",
+     "start_time": "2025-10-15T19:34:28.127667Z"
     }
    },
    "source": [
@@ -213,7 +213,7 @@
      }
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -248,8 +248,8 @@
    "id": "c0187687",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:54:29.996514Z",
-     "start_time": "2025-10-15T18:54:29.868588Z"
+     "end_time": "2025-10-15T19:34:30.188664Z",
+     "start_time": "2025-10-15T19:34:30.044035Z"
     }
    },
    "source": [
@@ -267,7 +267,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -290,8 +290,8 @@
    "id": "8f3dc48a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:57:12.291048Z",
-     "start_time": "2025-10-15T18:57:12.257447Z"
+     "end_time": "2025-10-15T19:34:30.236212Z",
+     "start_time": "2025-10-15T19:34:30.209982Z"
     }
    },
    "source": [
@@ -312,7 +312,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -327,8 +327,8 @@
    "id": "fd020a71",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T19:23:54.995205Z",
-     "start_time": "2025-10-15T19:23:54.195560Z"
+     "end_time": "2025-10-15T19:34:31.260054Z",
+     "start_time": "2025-10-15T19:34:30.246194Z"
     }
    },
    "source": [
@@ -361,7 +361,7 @@
      }
     }
    ],
-   "execution_count": 26
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -401,8 +401,8 @@
    "id": "ecb6fed2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T18:54:30.052208Z",
-     "start_time": "2025-10-15T18:54:30.049355Z"
+     "end_time": "2025-10-15T19:34:31.336178Z",
+     "start_time": "2025-10-15T19:34:31.332744Z"
     }
    },
    "source": [
@@ -413,15 +413,15 @@
     "    return accuracy_score(pred, y_test)"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "0d5d162f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T19:14:30.830366Z",
-     "start_time": "2025-10-15T19:14:30.660532Z"
+     "end_time": "2025-10-15T19:34:31.558066Z",
+     "start_time": "2025-10-15T19:34:31.360002Z"
     }
    },
    "source": [
@@ -448,7 +448,7 @@
      }
     }
    ],
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -471,8 +471,8 @@
    "id": "99cc096b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T19:24:29.851492Z",
-     "start_time": "2025-10-15T19:24:14.250734Z"
+     "end_time": "2025-10-15T19:34:33.515449Z",
+     "start_time": "2025-10-15T19:34:31.579831Z"
     }
    },
    "source": [
@@ -484,11 +484,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 ms ± 226 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "23.6 ms ± 1.92 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -503,8 +503,8 @@
    "id": "f6a19a88",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T19:22:18.418624Z",
-     "start_time": "2025-10-15T19:22:16.474141Z"
+     "end_time": "2025-10-15T19:34:35.999445Z",
+     "start_time": "2025-10-15T19:34:33.570712Z"
     }
    },
    "source": [
@@ -516,16 +516,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.39 ms ± 201 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.8 ms ± 278 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "There is a significant difference between the two methods. My KNN method took approximately 19 ms to run, while the SKLearn method only took about 2.4 ms.",
+   "source": "There is a significant difference between the two methods. My KNN method took approximately 23.6 ms to run, while the SKLearn method only took about 2.8 ms.",
    "id": "b31818139dfe5775"
   }
  ],
